// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withDrivers should show the component if the drivers array has data 1`] = `
<div>
  <div />
</div>
`;

exports[`withDrivers should show the loading message if drivers array is empty 1`] = `
<div>
  Loading...
</div>
`;
